k8s/infra/Weave-Gitops/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: weave-gitops-loadbalancer
  namespace: weave-gitops
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: weave-gitops
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
