k8s/infra/Weave-Gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: weave-gitops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - gitops.example.com
    secretName: weave-gitops-tls
  rules:
  - host: gitops.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weave-gitops
            port:
              number: 9001
